<resources>
    <string name="app_name">Dms</string>

    <string name="welcome_string_1">Welcome to DMS \nWhere you maintain your \nCredit score</string>
    <string name="welcome_button_string">I\'m new here</string>
    <string name="login_string">Login</string>
    <string name="lookup_string">Let’s check whether you \nHave an account</string>
    <string name="number_hint">Eg. 712345678</string>
    <string name="continue_string">Continue</string>
    <string name="create_account_string">Hey there! We love new \nCustomers let’s get to know you</string>
    <string name="instruction_1_string">Please fill in the following details</string>
    <string name="security_string"><![CDATA[We would like to make sure \nYour account is safe & secure]]></string>
    <string name="instruction_2_string">Select and answer some of the security questions</string>
    <string name="resend_code"><u>Resend code</u> </string>
    <string name="favorite_song">What is your favorite song?</string>
    <string name="favorite_color">What is your favorite color?</string>
    <string name="favorite_pet">What is your favorite pet?</string>
    <string name="favorite_month">Which is your favorite month?</string>
    <string name="nickname">What is your nickname?</string>
    <string name="verifying_your_account">Verifying your account</string>
    <string name="verification_code">We’ve sent a verification code to +2547123***78</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_0">0</string>
    <string name="create_4_digit">Create a new 4 digit pin</string>
    <string name="forgot_pin">forgot pin?</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_question_1">Select Question 1</string>
    <string name="select_question_2">Select Question 2</string>
    <string name="select_question_3">Select Question 3</string>
    <string name="input_answer">Please input your answer</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About us</string>
    <string name="help">help</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="welcome_back">Welcome back</string>
    <string name="loan_manager">Loan Manager</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="request_loan_payment">Register Loan for payment</string>
    <string name="transaction_history">Transaction history</string>
    <string name="loan_payment_request">Loan payment Request</string>
    <string name="request_loan">Request Loan payment</string>
    <string name="settle_string">Lets settle your loan and borrow within your limits for \nyou. Select one of the loan companies that you have \na loan with</string>
    <string name="mpesa">Mpesa</string>
    <string name="withdraw">Withdraw</string>
    <string name="forgot_pin_string">Forgot pin?</string>
    <string name="sucks_string">Sucks to forget your pin! Don’t \nworry we got you</string>
    <string name="answer_text">Please answer the security question below</string>
    <string name="give_answer">Give answer</string>
    <string name="let_s_verify_your_account">Let’s verify your account</string>
    <string name="kindly_provide">Kindly provide your ID number</string>
    <string name="timiza">Timiza</string>
    <string name="national_id_details">National ID details</string>
    <string name="take_while">This may take a while please bear with us….</string>
    <string name="hold_on">Hold on as we check if you \nqualify</string>
    <string name="hurray">Hurray you’ve successfully \nregistered your loan</string>
    <string name="successful_txt">We will notify you after we settle your loan</string>
    <string name="thank_you">Thank you for choosing us!</string>
    <string name="oops">Oops! Something went wrong With this registration</string>
    <string name="top_up_via">Top-up via</string>
    <string name="notification">Notifications</string>
    <string name="withdrawal_failed">Withdrawal failed</string>
    <string name="deposit_successful">Deposit successful</string>
    <string name="request_loan_payment_successful">Request loan Payment successful</string>
    <string name="request_loan_payment_failed">Request loan Payment failed</string>
    <string name="_10_32pm">10:32pm</string>
    <string name="consent">We need you to allow DMS to borrow another loan upon settling your existing loan with a slight charge from accessing our services, your existing loan will be settled and borrowed again on your behalf. \n\nWith your permission and consent we will only borrow within your loan limits and also have a percentage charge of 10% on your current loan. \n\nUpon your consent we will notify the third party application that you have granted us permission to borrow on your behalf and they will send you a notification when we make the borrowing on your behalf. \n\nYou may choose to revoke this consent prior to us borrowing the loan by deregistering your loan at anytime or you can send us a request to delete the loan registered but this will be possible only 24hrs before we settle the loan. \n\nOnce we clear the loan you will deal with the loan application that you took your loan and our agreement will be terminated upon settling and re-borrowing. \n\nWe will not share or disclose your loan status to any third parties other than your loan application without your consent. \n\nPlease read full Data privacy policy</string>
    <string name="consent_checkBox">I consent to giving DMS permission to borrow on \nmy behalf upon settling of my existing loan</string>
    <string name="third_party_loan_application">Third party loan application</string>
    <string name="consent_to_borrowing">Consent to borrowing</string>
    <string name="success_loan_detail">We’ve broken down your loan and how we will structure \nThe payment after we settle the loan</string>
    <string name="apologise">We apologise for any inconvenience. Kindly try again later</string>
    <string name="deposit">Deposit</string>
    <string name="enter_amount">Enter Amount</string>

</resources>