<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.deposit.DepositFragment">


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deposit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/deposit"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="@+id/back_arrow" />

    <TextView

        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/enter_amount"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="normal"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deposit_txt" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deposit_txt" />

    <TextView

        android:id="@+id/withdraw_warning_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Minimum amount Kes 100"
        android:textColor="@color/helperTextColor"
        android:textSize="14sp"
        android:visibility="invisible"
        android:fontFamily="@font/nunito_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_amount" />

    <Button
        android:id="@+id/btn_one"
        style="@style/keypad_buttons_style"
        android:layout_marginTop="24dp"
        android:text="@string/string_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

    <Button
        android:id="@+id/btn_two"
        style="@style/keypad_buttons_style"
        android:text="@string/string_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_one"
        app:layout_constraintTop_toTopOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_three"
        style="@style/keypad_buttons_style"
        android:text="@string/string_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_four"
        style="@style/keypad_buttons_style"
        android:text="@string/string_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_one"
        app:layout_constraintTop_toBottomOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_five"
        style="@style/keypad_buttons_style"
        android:text="@string/string_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_six"
        app:layout_constraintStart_toStartOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_six"
        style="@style/keypad_buttons_style"
        android:text="@string/string_6"
        app:layout_constraintEnd_toEndOf="@+id/btn_three"
        app:layout_constraintStart_toStartOf="@+id/btn_three"
        app:layout_constraintTop_toTopOf="@+id/btn_five" />

    <Button
        android:id="@+id/btn_seven"
        style="@style/keypad_buttons_style"
        android:text="@string/string_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_useFingerprint"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_four"
        app:layout_constraintTop_toBottomOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/keypad_buttons_style"
        android:text="@string/string_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_nine"
        app:layout_constraintStart_toStartOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/keypad_buttons_style"
        android:text="@string/string_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_six"
        app:layout_constraintTop_toTopOf="@+id/btn_eight" />

    <ImageView
        android:id="@+id/btn_useFingerprint"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:visibility="invisible"
        android:padding="12dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_seven"
        app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/keypad_buttons_style"
        android:text="@string/string_0"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Delete"
        app:layout_constraintStart_toStartOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_useFingerprint" />

    <ImageView
        android:id="@+id/btn_Delete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:padding="16dp"
        android:src="@drawable/ic_delete"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_nine"
        app:layout_constraintTop_toTopOf="@+id/btn_zero" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/continue_btn_bg"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/continue_string"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>