<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.request.AuthorizeFragment">



    <ImageView
        android:id="@+id/arrow_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <include
        android:id="@+id/app_logo"
        android:layout_marginTop="8dp"
        layout="@layout/app_logo_imageview"
        app:layout_constraintTop_toBottomOf="@id/arrow_back_img"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView

        android:id="@+id/create4digitpin_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Enter Pin"
        android:textColor="@color/colorSecondary"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_authorize_txt" />

    <TextView

        android:id="@+id/pin_error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/helperTextColor"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"
        android:fontFamily="@font/nunito_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create4digitpin_txt" />

    <TextView

        android:id="@+id/tv_authorize_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="Authorise this transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />


    <!--    <com.wang.avi.AVLoadingIndicatorView-->
    <!--        android:id="@+id/avi"-->
    <!--        style="@style/AVLoadingIndicatorView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:visibility="invisible"-->
    <!--        app:indicatorColor="@color/colorPrimary"-->
    <!--        app:indicatorName="BallPulseSyncIndicator"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/create4digitpin_txt" />-->

    <View
        android:id="@+id/pin1"
        style="@style/pin_views"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_one"
        app:layout_constraintEnd_toStartOf="@+id/pin2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create4digitpin_txt" />

    <View
        android:id="@+id/pin2"
        style="@style/pin_views"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toStartOf="@+id/pin3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pin1"
        app:layout_constraintTop_toTopOf="@+id/pin1" />

    <View
        android:id="@+id/pin3"
        style="@style/pin_views"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toStartOf="@+id/pin4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pin2"
        app:layout_constraintTop_toTopOf="@+id/pin2" />

    <View
        android:id="@+id/pin4"
        style="@style/pin_views"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pin3"
        app:layout_constraintTop_toTopOf="@+id/pin3" />


    <Button
        android:id="@+id/btn_one"
        style="@style/keypad_buttons_style"
        android:layout_marginTop="24dp"
        android:text="@string/string_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin1" />

    <Button
        android:id="@+id/btn_two"
        style="@style/keypad_buttons_style"
        android:text="@string/string_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_one"
        app:layout_constraintTop_toTopOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_three"
        style="@style/keypad_buttons_style"
        android:text="@string/string_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_four"
        style="@style/keypad_buttons_style"
        android:text="@string/string_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_one"
        app:layout_constraintTop_toBottomOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_five"
        style="@style/keypad_buttons_style"
        android:text="@string/string_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_six"
        app:layout_constraintStart_toStartOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_six"
        style="@style/keypad_buttons_style"
        android:text="@string/string_6"
        app:layout_constraintEnd_toEndOf="@+id/btn_three"
        app:layout_constraintStart_toStartOf="@+id/btn_three"
        app:layout_constraintTop_toTopOf="@+id/btn_five" />

    <Button
        android:id="@+id/btn_seven"
        style="@style/keypad_buttons_style"
        android:text="@string/string_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_useFingerprint"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_four"
        app:layout_constraintTop_toBottomOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/keypad_buttons_style"
        android:text="@string/string_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_nine"
        app:layout_constraintStart_toStartOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/keypad_buttons_style"
        android:text="@string/string_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_six"
        app:layout_constraintTop_toTopOf="@+id/btn_eight" />

    <ImageView
        android:id="@+id/btn_useFingerprint"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:visibility="invisible"
        android:padding="12dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgotPin"
        app:layout_constraintEnd_toStartOf="@+id/btn_zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_seven"
        app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/keypad_buttons_style"
        android:text="@string/string_0"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Delete"
        app:layout_constraintStart_toStartOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_useFingerprint" />

    <ImageView
        android:id="@+id/btn_Delete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:padding="16dp"
        android:src="@drawable/ic_delete"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_nine"
        app:layout_constraintTop_toTopOf="@+id/btn_zero" />


    <Button
        android:id="@+id/tv_forgotPin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:lineSpacingExtra="12sp"
        android:text="@string/forgot_pin"
        android:textColor="#6f7070"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_useFingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>