<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="70dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/consent_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/consent_to_borrowing"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/third_party_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/third_party_loan_application"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/consent_txt"
        app:layout_constraintTop_toBottomOf="@+id/consent_txt" />

    <ImageView
        android:id="@+id/cancel_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/consent_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/consent_txt"
        app:srcCompat="@drawable/ic_cancel" />

    <TextView
        android:id="@+id/consent_full_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/consent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_party_txt" />
    
    <View
        android:id="@+id/cross"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:background="#BBB8B8"
        app:layout_constraintTop_toBottomOf="@id/consent_full_txt"/>

    <CheckBox
        android:id="@+id/consent_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:text="@string/consent_checkBox"
        android:fontFamily="@font/nunito_sans"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cross" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_consent_btn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/continue_btn_bg"
        android:text="@string/continue_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consent_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>