<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.request.RequestFragment">


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/request_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/request_loan"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow" />

    <TextView
        android:id="@+id/settle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/settle_string"
        app:layout_constraintStart_toStartOf="@+id/request_txt"
        app:layout_constraintTop_toBottomOf="@+id/request_txt" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/loan_company_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settle_txt"
        tools:itemCount="4"
        tools:listitem="@layout/loan_company_list_item_layout" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_string"
        android:background="@drawable/continue_btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>